[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/roboto_dynamic_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/roboto_slab.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/level_selector.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Theme" id=4]
HScrollBar/styles/scroll = SubResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="LevelSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 12

[node name="Menu" type="Button" parent="HContainer" groups=["Button"]]
margin_right = 100.0
margin_bottom = 49.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Menu"

[node name="StarContainer" type="Control" parent="HContainer"]
margin_left = 112.0
margin_right = 192.0
margin_bottom = 49.0
rect_min_size = Vector2( 80, 30 )

[node name="Background" type="ColorRect" parent="HContainer/StarContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -15.0
margin_right = 40.0
margin_bottom = 15.0
color = Color( 0, 0, 0, 0.607843 )

[node name="Text" type="Label" parent="HContainer/StarContainer/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -11.0
margin_right = 26.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "⭐ 1/34"
align = 1
valign = 1

[node name="ScrollList" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -150.0
margin_right = 384.0
margin_bottom = 150.0
theme = SubResource( 4 )
scroll_vertical_enabled = false

[node name="HContainer" type="HBoxContainer" parent="ScrollList"]
margin_right = 970.0
margin_bottom = 300.0
custom_constants/separation = 20

[node name="Level1Container" type="Control" parent="ScrollList/HContainer"]
margin_right = 90.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 300 )
mouse_filter = 2

[node name="1" type="Button" parent="ScrollList/HContainer/Level1Container" groups=["Button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.5
margin_right = 25.0
margin_bottom = 24.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "1"

[node name="Text" type="Label" parent="ScrollList/HContainer/Level1Container/1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_top = -11.0
margin_right = 10.0
margin_bottom = 11.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 1 )
text = "⭐ ⭐"
align = 2
valign = 1

[node name="Level2Container" type="Control" parent="ScrollList/HContainer"]
margin_left = 110.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 300 )
mouse_filter = 2

[node name="2" type="Button" parent="ScrollList/HContainer/Level2Container" groups=["Button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.5
margin_right = 25.0
margin_bottom = 24.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "2"

[node name="Text" type="Label" parent="ScrollList/HContainer/Level2Container/2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_top = -11.0
margin_right = 10.0
margin_bottom = 11.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 1 )
text = "⭐"
align = 2
valign = 1

[node name="Level3Container" type="Control" parent="ScrollList/HContainer"]
margin_left = 220.0
margin_right = 310.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 300 )
mouse_filter = 2

[node name="3" type="Button" parent="ScrollList/HContainer/Level3Container" groups=["Button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.5
margin_right = 25.0
margin_bottom = 24.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "3"

[node name="Text" type="Label" parent="ScrollList/HContainer/Level3Container/3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_top = -11.0
margin_right = 22.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 1

[node name="Level4Container" type="Control" parent="ScrollList/HContainer"]
margin_left = 330.0
margin_right = 420.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 300 )
mouse_filter = 2

[node name="4" type="Button" parent="ScrollList/HContainer/Level4Container" groups=["Button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.5
margin_right = 25.0
margin_bottom = 24.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "?"

[node name="Text" type="Label" parent="ScrollList/HContainer/Level4Container/4"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_top = -11.0
margin_right = 22.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 1

[node name="Level5Container" type="Control" parent="ScrollList/HContainer"]
margin_left = 440.0
margin_right = 530.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 300 )
mouse_filter = 2

[node name="5" type="Button" parent="ScrollList/HContainer/Level5Container" groups=["Button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.5
margin_right = 25.0
margin_bottom = 24.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "?"

[node name="Text" type="Label" parent="ScrollList/HContainer/Level5Container/5"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_top = -11.0
margin_right = 22.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 1

[node name="Level6Container" type="Control" parent="ScrollList/HContainer"]
margin_left = 550.0
margin_right = 640.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 300 )
mouse_filter = 2

[node name="6" type="Button" parent="ScrollList/HContainer/Level6Container" groups=["Button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.5
margin_right = 25.0
margin_bottom = 24.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "?"

[node name="Text" type="Label" parent="ScrollList/HContainer/Level6Container/6"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_top = -11.0
margin_right = 22.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 1

[node name="Level7Container" type="Control" parent="ScrollList/HContainer"]
margin_left = 660.0
margin_right = 750.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 300 )
mouse_filter = 2

[node name="7" type="Button" parent="ScrollList/HContainer/Level7Container" groups=["Button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.5
margin_right = 25.0
margin_bottom = 24.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "?"

[node name="Text" type="Label" parent="ScrollList/HContainer/Level7Container/7"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_top = -11.0
margin_right = 22.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 1

[node name="Level8Container" type="Control" parent="ScrollList/HContainer"]
margin_left = 770.0
margin_right = 860.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 300 )
mouse_filter = 2

[node name="8" type="Button" parent="ScrollList/HContainer/Level8Container" groups=["Button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.5
margin_right = 25.0
margin_bottom = 24.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "?"

[node name="Text" type="Label" parent="ScrollList/HContainer/Level8Container/8"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_top = -11.0
margin_right = 22.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 1

[node name="Level9Container" type="Control" parent="ScrollList/HContainer"]
margin_left = 880.0
margin_right = 970.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 300 )
mouse_filter = 2

[node name="9" type="Button" parent="ScrollList/HContainer/Level9Container" groups=["Button"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.5
margin_right = 25.0
margin_bottom = 24.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "?"

[node name="Text" type="Label" parent="ScrollList/HContainer/Level9Container/9"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_top = -11.0
margin_right = 22.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 1
